--- a/echostation/pubspec.yaml
+++ b/echostation/pubspec.yaml
@@ -1,4 +1,4 @@
-name: Echostation
+name: echostation
 description: "SMACON's echostation"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
